# Advent2025

./: .gitignore  CMakeLists.txt  README.md  time-all  timer.h
day1/: day1a.cpp  day1b.cpp
day10/: day10a.cpp  day10b.cpp
day11/: day11a.cpp  day11b.cpp
day12/: day12a.cpp
day2/: day2a.cpp  day2b.cpp
day3/: day3a.cpp  day3b.cpp
day4/: day4a.cpp  day4b.cpp
day5/: day5a.cpp  day5b.cpp
day6/: day6a.cpp  day6b.cpp
day7/: day7a.cpp  day7b.cpp
day8/: day8a.cpp  day8b.cpp
day9/: day9a.cpp  day9b.cpp  day9b_row_scan.cpp
